# codescope-mcp

./: .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
plugins/codescope/: .mcp.json
plugins/codescope/.claude-plugin/: plugin.json
plugins/codescope/commands/: calls.md  context.md  imports.md  symbol.md  todos.md
plugins/codescope/scripts/: setup.sh
plugins/codescope/skills/context/: SKILL.md
plugins/codescope/skills/imports/: SKILL.md
plugins/codescope/skills/method-calls/: SKILL.md
plugins/codescope/skills/symbol-analysis/: SKILL.md
plugins/codescope/skills/todos/: SKILL.md
queries/css/: definitions.scm  usages.scm
queries/go/: definitions.scm  usages.scm
queries/html/: definitions.scm  usages.scm
queries/java/: definitions.scm  usages.scm
queries/javascript/: definitions.scm  usages.scm
queries/markdown/: definitions.scm  usages.scm
queries/python/: definitions.scm  usages.scm
queries/rust/: definitions.scm  usages.scm
queries/sql/: definitions.scm  usages.scm
queries/typescript/: definitions.scm  usages.scm
scripts/: setup.sh
skills/symbol-analysis/: SKILL.md
src/: config.rs  lib.rs  main.rs
src/cache/: file_content.rs  manager.rs  mod.rs
src/context/: extractor.rs
src/language/: css.rs  go.rs  html.rs  java.rs  javascript.rs  macros.rs  markdown.rs  mod.rs  python.rs  registry.rs  rust.rs  sql.rs  traits.rs  typescript.rs
src/parser/: cache.rs  cached.rs  generic.rs  mod.rs  typescript.rs
src/pipeline/: collectors.rs  mod.rs  stats.rs
src/server/: handler.rs  types.rs
src/symbol/: comment.rs  definition.rs  mod.rs  sql_comment.rs  types.rs  usage.rs
tests/fixtures/: jsdoc_test.ts  sample.css  sample.go  sample.html  sample.java  sample.js  sample.jsx  sample.md  sample.py  sample.rs  sample.sql  sample.ts  semantic_test.ts
tests/integration/: mod.rs  stats_test.rs  symbol_test.rs
