[package]
name = "codescope-mcp"
version = "0.1.10"
edition = "2021"

[dependencies]
# MCP protocol (official Rust SDK)
rmcp = { version = "0.11", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Utilities
anyhow = "1.0"
glob = "0.3"
thiserror = "1.0"
walkdir = "2"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
